pa2/solutions/ss8ff-weh9r3/y.output
Terminals unused in grammar

   ABSTRACT
   ALIGNOF
   AS
   BE
   BREAK
   CONST
   CONTINUE
   CRATE
   DO
   EXTERN
   FINAL
   FOR
   IMPL
   IN
   MACRO_RULES
   MACRO
   MOD
   MOVE
   OFFSETOF
   OVERRIDE
   PRIV
   PUB
   PURE
   SIZEOF
   STATIC
   SELF
   SUPER
   TRAIT
   TYPEOF
   TYPE
   UNSAFE
   UNSIZED
   USE
   VIRTUAL
   WHERE
   YIELD
   U16
   U32
   U64
   I8
   I16
   I64
   F32
   F64
   USIZE
   ISIZE
   CHAR
   STR
   POUNDNOT
   POUND
   DOLLAR
   ANDEQU
   OREQU
   EXCOREQU
   EXCLUSIVEOR
   LOGICLEFTSHIFTEQU
   LOGICLEFTSHIFT
   LOGICRIGHTSHIFTEQU
   LOGICRIGHTSHIFT
   DDOT
   TDOT
   UNKNOWN
   STRING
   NOT
   REM


Rules useless in parser due to conflicts

   52 let: LET pat COLON type


State 80 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 188 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 192 conflicts: 1 shift/reduce
State 224 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 237 conflicts: 13 shift/reduce
State 247 conflicts: 13 shift/reduce
State 249 conflicts: 13 shift/reduce
State 250 conflicts: 1 shift/reduce
State 251 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 253 conflicts: 1 shift/reduce
State 254 conflicts: 1 shift/reduce
State 255 conflicts: 1 shift/reduce
State 256 conflicts: 1 shift/reduce
State 257 conflicts: 1 shift/reduce
State 258 conflicts: 1 shift/reduce
State 259 conflicts: 1 shift/reduce
State 260 conflicts: 1 shift/reduce
State 261 conflicts: 1 shift/reduce
State 262 conflicts: 13 shift/reduce
State 269 conflicts: 13 shift/reduce
State 286 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: crate

    2 crate: items

    3 items: item items
    4      | item

    5 item: funct
    6     | enum
    7     | struct

    8 funct: FN ID LPAREN fn_params RPAREN block
    9      | FN ID LPAREN fn_params RPAREN ELEMENTSELECT type block
   10      | FN ID LPAREN fn_params RPAREN ELEMENTSELECT EXCL block
   11      | FN ID LPAREN RPAREN block
   12      | FN ID LPAREN RPAREN ELEMENTSELECT type block
   13      | FN ID LPAREN RPAREN ELEMENTSELECT EXCL block

   14 block: LCBRACK RCBRACK
   15      | LCBRACK stmts RCBRACK

   16 stmts: stmt stmts
   17      | stmt
   18      | exp

   19 stmt: exp SEMICOLON
   20     | let SEMICOLON
   21     | RETURN exp SEMICOLON
   22     | RETURN SEMICOLON

   23 fn_params: fn_param COMMA fn_params
   24          | fn_param

   25 fn_param: pat COLON type

   26 enum: ENUM ID LCBRACK enum_ctor_defs RCBRACK

   27 enum_ctor_defs: enum_ctor_def COMMA enum_ctor_defs
   28               | enum_ctor_def

   29 enum_ctor_def: ID
   30              | ID LPAREN ctor-types RPAREN

   31 ctor-types: type COMMA ctor-types
   32           | type

   33 struct: STRUCT ID LCBRACK struct_field_defs RCBRACK

   34 struct_field_defs: struct_field_def COMMA struct_field_defs
   35                  | struct_field_def

   36 struct_field_def: ID COLON type

   37 type: BOOL
   38     | BOOL SEMICOLON type
   39     | AND type
   40     | AND MUT type
   41     | BOX LESS type GREATER
   42     | ID
   43     | LITDEC
   44     | I32
   45     | I32 SEMICOLON type
   46     | type SEMICOLON LITDEC
   47     | U8
   48     | LPAREN RPAREN
   49     | LBRACK type RBRACK

   50 box_new: BOX QUALIFIER NEW LPAREN exp RPAREN

   51 let: LET pat
   52    | LET pat COLON type
   53    | LET pat COLON type EQU exp
   54    | LET pat EQU exp

   55 pat: prim_lit
   56    | name_bind
   57    | LPAREN RPAREN
   58    | deref-pat
   59    | array_pat
   60    | enum_pat
   61    | struct_pat
   62    | SUB LITDEC
   63    | UNDER

   64 deref-pat: AND pat

   65 name_bind: ID
   66          | REF ID
   67          | REF MUT ID
   68          | MUT ID

   69 address: AND exp

   70 address-mut: AND MUT exp

   71 deref: MUL exp

   72 array_pat: LBRACK array_elems RBRACK

   73 array_elems: pat COMMA array_elems
   74            | pat

   75 enum_pat: ID QUALIFIER ID
   76         | ID QUALIFIER ID LPAREN enum-ctors RPAREN

   77 enum-ctors: pat COMMA enum-ctors
   78           | pat

   79 struct_pat: ID LCBRACK pat-fields RCBRACK

   80 pat-fields: pat-field COMMA pat-fields
   81           | pat-field

   82 pat-field: ID COLON pat

   83 exps: exp COMMA exps
   84     | exp

   85 match: MATCH LPAREN exp RPAREN LCBRACK match-params RCBRACK

   86 match-params: match-param COMMA match-params
   87             | match-param

   88 match-param: pats RARROW block

   89 pats: pat INCLUOR pats
   90     | pat

   91 exp: ID
   92    | lit
   93    | field_lookup
   94    | array_index
   95    | assign
   96    | while
   97    | loop
   98    | if
   99    | match
  100    | fn-call
  101    | box_new
  102    | LPAREN exp RPAREN
  103    | LPAREN RPAREN
  104    | add
  105    | sub
  106    | mul
  107    | div
  108    | or
  109    | and
  110    | equal
  111    | not-equal
  112    | minus
  113    | less
  114    | greater
  115    | less-equ
  116    | greater-equ
  117    | rem
  118    | not
  119    | address
  120    | address-mut
  121    | deref

  122 add: exp ADD exp

  123 sub: exp SUB exp

  124 mul: exp MUL exp

  125 div: exp DIV exp

  126 or: exp LOGICOR exp

  127 and: exp LOGICAND exp

  128 equal: exp LOGICEQU exp

  129 not-equal: exp NOTEQU exp

  130 minus: SUB exp

  131 less: exp LESS exp

  132 greater: exp GREATER exp

  133 less-equ: exp LESSEQU exp

  134 greater-equ: exp GREATEREQU exp

  135 rem: exp REMAINDER exp

  136 not: EXCL exp

  137 while: WHILE LPAREN exp RPAREN block

  138 loop: LOOP block

  139 if: IF LPAREN exp RPAREN block ELSE block
  140   | IF LPAREN exp RPAREN block

  141 lit: prim_lit
  142    | comp_lit

  143 prim_lit: T
  144         | F
  145         | LITCHAR
  146         | LITSTR
  147         | LITDEC

  148 field_lookup: field DOT field

  149 field: ID
  150      | field_lookup
  151      | array_index
  152      | fn-call

  153 array_index: ID LBRACK exp RBRACK
  154            | fn-call LBRACK exp RBRACK
  155            | array_index LBRACK exp RBRACK

  156 fn-call: ID LPAREN exps RPAREN
  157        | ID LPAREN RPAREN

  158 assign: ID assign_type exp
  159       | field_lookup assign_type exp
  160       | array_index assign_type exp

  161 assign_type: SUBEQU
  162            | ADDEQU
  163            | MULEQU
  164            | DIVEQU
  165            | REMAINEQU
  166            | EQU

  167 comp_lit: enum_lit
  168         | struct_lit
  169         | array_lit

  170 enum_lit: ID QUALIFIER ID
  171         | ID QUALIFIER ID LPAREN enum_exp RPAREN

  172 enum_exp: exp COMMA enum_exp
  173         | exp

  174 struct_lit: ID LCBRACK id_binds RCBRACK

  175 id_binds: id_bind COMMA id_binds
  176         | id_bind

  177 id_bind: ID COLON exp

  178 array_lit: LBRACK enum_exp RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
LITDEC (258) 43 46 62 147
ID (259) 8 9 10 11 12 13 26 29 30 33 36 42 65 66 67 68 75 76 79 82
    91 149 153 156 157 158 170 171 174 177
LITSTR (260) 146
LITCHAR (261) 145
T (262) 143
F (263) 144
ABSTRACT (264)
ALIGNOF (265)
AS (266)
BE (267)
BOX (268) 41 50
BREAK (269)
CONST (270)
CONTINUE (271)
CRATE (272)
DO (273)
ELSE (274) 139
EXTERN (275)
FINAL (276)
FN (277) 8 9 10 11 12 13
FOR (278)
IF (279) 139 140
IMPL (280)
IN (281)
LET (282) 51 52 53 54
LOOP (283) 138
MACRO_RULES (284)
MACRO (285)
MATCH (286) 85
MOD (287)
MOVE (288)
MUT (289) 40 67 68 70
NEW (290) 50
OFFSETOF (291)
OVERRIDE (292)
PRIV (293)
PUB (294)
PURE (295)
REF (296) 66 67
RETURN (297) 21 22
SIZEOF (298)
STATIC (299)
SELF (300)
STRUCT (301) 33
SUPER (302)
TRAIT (303)
TYPEOF (304)
TYPE (305)
UNSAFE (306)
UNSIZED (307)
USE (308)
VIRTUAL (309)
WHERE (310)
WHILE (311) 137
YIELD (312)
BOOL (313) 37 38
U8 (314) 47
U16 (315)
U32 (316)
U64 (317)
I8 (318)
I16 (319)
I32 (320) 44 45
I64 (321)
F32 (322)
F64 (323)
USIZE (324)
ISIZE (325)
CHAR (326)
STR (327)
COLON (328) 25 36 52 53 82 177
QUALIFIER (329) 50 75 76 170 171
ELEMENTSELECT (330) 9 10 12 13
RARROW (331) 88
POUNDNOT (332)
POUND (333)
DOLLAR (334)
LBRACK (335) 49 72 153 154 155 178
RBRACK (336) 49 72 153 154 155 178
LCBRACK (337) 14 15 26 33 79 85 174
RCBRACK (338) 14 15 26 33 79 85 174
COMMA (339) 23 27 31 34 73 77 80 83 86 172 175
SEMICOLON (340) 19 20 21 22 38 45 46
DIVEQU (341) 164
REMAINEQU (342) 165
REMAINDER (343) 135
ANDEQU (344)
LOGICAND (345) 127
AND (346) 39 40 64 69 70
OREQU (347)
LOGICOR (348) 126
INCLUOR (349) 89
EXCOREQU (350)
EXCLUSIVEOR (351)
LOGICLEFTSHIFTEQU (352)
LOGICLEFTSHIFT (353)
LOGICRIGHTSHIFTEQU (354)
LOGICRIGHTSHIFT (355)
LESSEQU (356) 133
GREATEREQU (357) 134
LESS (358) 41 131
GREATER (359) 41 132
ADDEQU (360) 162
SUBEQU (361) 161
MULEQU (362) 163
LOGICEQU (363) 128
EQU (364) 53 54 166
NOTEQU (365) 129
EXCL (366) 10 13 136
LPAREN (367) 8 9 10 11 12 13 30 48 50 57 76 85 102 103 137 139 140
    156 157 171
RPAREN (368) 8 9 10 11 12 13 30 48 50 57 76 85 102 103 137 139 140
    156 157 171
ADD (369) 122
SUB (370) 62 123 130
MUL (371) 71 124
DIV (372) 125
DDOT (373)
TDOT (374)
UNKNOWN (375)
ENUM (376) 26
STRING (377)
DOT (378) 148
NOT (379)
UNDER (380) 63
REM (381)


Nonterminals, with rules where they appear

$accept (127)
    on left: 0
program (128)
    on left: 1, on right: 0
crate (129)
    on left: 2, on right: 1
items (130)
    on left: 3 4, on right: 2 3
item (131)
    on left: 5 6 7, on right: 3 4
funct (132)
    on left: 8 9 10 11 12 13, on right: 5
block (133)
    on left: 14 15, on right: 8 9 10 11 12 13 88 137 138 139 140
stmts (134)
    on left: 16 17 18, on right: 15 16
stmt (135)
    on left: 19 20 21 22, on right: 16 17
fn_params (136)
    on left: 23 24, on right: 8 9 10 23
fn_param (137)
    on left: 25, on right: 23 24
enum (138)
    on left: 26, on right: 6
enum_ctor_defs (139)
    on left: 27 28, on right: 26 27
enum_ctor_def (140)
    on left: 29 30, on right: 27 28
ctor-types (141)
    on left: 31 32, on right: 30 31
struct (142)
    on left: 33, on right: 7
struct_field_defs (143)
    on left: 34 35, on right: 33 34
struct_field_def (144)
    on left: 36, on right: 34 35
type (145)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49, on right: 9 12
    25 31 32 36 38 39 40 41 45 46 49 52 53
box_new (146)
    on left: 50, on right: 101
let (147)
    on left: 51 52 53 54, on right: 20
pat (148)
    on left: 55 56 57 58 59 60 61 62 63, on right: 25 51 52 53 54 64
    73 74 77 78 82 89 90
deref-pat (149)
    on left: 64, on right: 58
name_bind (150)
    on left: 65 66 67 68, on right: 56
address (151)
    on left: 69, on right: 119
address-mut (152)
    on left: 70, on right: 120
deref (153)
    on left: 71, on right: 121
array_pat (154)
    on left: 72, on right: 59
array_elems (155)
    on left: 73 74, on right: 72 73
enum_pat (156)
    on left: 75 76, on right: 60
enum-ctors (157)
    on left: 77 78, on right: 76 77
struct_pat (158)
    on left: 79, on right: 61
pat-fields (159)
    on left: 80 81, on right: 79 80
pat-field (160)
    on left: 82, on right: 80 81
exps (161)
    on left: 83 84, on right: 83 156
match (162)
    on left: 85, on right: 99
match-params (163)
    on left: 86 87, on right: 85 86
match-param (164)
    on left: 88, on right: 86 87
pats (165)
    on left: 89 90, on right: 88 89
exp (166)
    on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108 109 110 111 112 113 114 115 116 117 118 119 120 121, on right:
    18 19 21 50 53 54 69 70 71 83 84 85 102 122 123 124 125 126 127
    128 129 130 131 132 133 134 135 136 137 139 140 153 154 155 158
    159 160 172 173 177
add (167)
    on left: 122, on right: 104
sub (168)
    on left: 123, on right: 105
mul (169)
    on left: 124, on right: 106
div (170)
    on left: 125, on right: 107
or (171)
    on left: 126, on right: 108
and (172)
    on left: 127, on right: 109
equal (173)
    on left: 128, on right: 110
not-equal (174)
    on left: 129, on right: 111
minus (175)
    on left: 130, on right: 112
less (176)
    on left: 131, on right: 113
greater (177)
    on left: 132, on right: 114
less-equ (178)
    on left: 133, on right: 115
greater-equ (179)
    on left: 134, on right: 116
rem (180)
    on left: 135, on right: 117
not (181)
    on left: 136, on right: 118
while (182)
    on left: 137, on right: 96
loop (183)
    on left: 138, on right: 97
if (184)
    on left: 139 140, on right: 98
lit (185)
    on left: 141 142, on right: 92
prim_lit (186)
    on left: 143 144 145 146 147, on right: 55 141
field_lookup (187)
    on left: 148, on right: 93 150 159
field (188)
    on left: 149 150 151 152, on right: 148
array_index (189)
    on left: 153 154 155, on right: 94 151 155 160
fn-call (190)
    on left: 156 157, on right: 100 152 154
assign (191)
    on left: 158 159 160, on right: 95
assign_type (192)
    on left: 161 162 163 164 165 166, on right: 158 159 160
comp_lit (193)
    on left: 167 168 169, on right: 142
enum_lit (194)
    on left: 170 171, on right: 167
enum_exp (195)
    on left: 172 173, on right: 171 172 178
struct_lit (196)
    on left: 174, on right: 168
id_binds (197)
    on left: 175 176, on right: 174 175
id_bind (198)
    on left: 177, on right: 175 176
array_lit (199)
    on left: 178, on right: 169


State 0

    0 $accept: . program $end

    FN      shift, and go to state 1
    STRUCT  shift, and go to state 2
    ENUM    shift, and go to state 3

    program  go to state 4
    crate    go to state 5
    items    go to state 6
    item     go to state 7
    funct    go to state 8
    enum     go to state 9
    struct   go to state 10


State 1

    8 funct: FN . ID LPAREN fn_params RPAREN block
    9      | FN . ID LPAREN fn_params RPAREN ELEMENTSELECT type block
   10      | FN . ID LPAREN fn_params RPAREN ELEMENTSELECT EXCL block
   11      | FN . ID LPAREN RPAREN block
   12      | FN . ID LPAREN RPAREN ELEMENTSELECT type block
   13      | FN . ID LPAREN RPAREN ELEMENTSELECT EXCL block

    ID  shift, and go to state 11


State 2

   33 struct: STRUCT . ID LCBRACK struct_field_defs RCBRACK

    ID  shift, and go to state 12


State 3

   26 enum: ENUM . ID LCBRACK enum_ctor_defs RCBRACK

    ID  shift, and go to state 13


State 4

    0 $accept: program . $end

    $end  shift, and go to state 14


State 5

    1 program: crate .

    $default  reduce using rule 1 (program)


State 6

    2 crate: items .

    $default  reduce using rule 2 (crate)


State 7

    3 items: item . items
    4      | item .

    FN      shift, and go to state 1
    STRUCT  shift, and go to state 2
    ENUM    shift, and go to state 3

    $default  reduce using rule 4 (items)

    items   go to state 15
    item    go to state 7
    funct   go to state 8
    enum    go to state 9
    struct  go to state 10


State 8

    5 item: funct .

    $default  reduce using rule 5 (item)


State 9

    6 item: enum .

    $default  reduce using rule 6 (item)


State 10

    7 item: struct .

    $default  reduce using rule 7 (item)


State 11

    8 funct: FN ID . LPAREN fn_params RPAREN block
    9      | FN ID . LPAREN fn_params RPAREN ELEMENTSELECT type block
   10      | FN ID . LPAREN fn_params RPAREN ELEMENTSELECT EXCL block
   11      | FN ID . LPAREN RPAREN block
   12      | FN ID . LPAREN RPAREN ELEMENTSELECT type block
   13      | FN ID . LPAREN RPAREN ELEMENTSELECT EXCL block

    LPAREN  shift, and go to state 16


State 12

   33 struct: STRUCT ID . LCBRACK struct_field_defs RCBRACK

    LCBRACK  shift, and go to state 17


State 13

   26 enum: ENUM ID . LCBRACK enum_ctor_defs RCBRACK

    LCBRACK  shift, and go to state 18


State 14

    0 $accept: program $end .

    $default  accept


State 15

    3 items: item items .

    $default  reduce using rule 3 (items)


State 16

    8 funct: FN ID LPAREN . fn_params RPAREN block
    9      | FN ID LPAREN . fn_params RPAREN ELEMENTSELECT type block
   10      | FN ID LPAREN . fn_params RPAREN ELEMENTSELECT EXCL block
   11      | FN ID LPAREN . RPAREN block
   12      | FN ID LPAREN . RPAREN ELEMENTSELECT type block
   13      | FN ID LPAREN . RPAREN ELEMENTSELECT EXCL block

    LITDEC   shift, and go to state 19
    ID       shift, and go to state 20
    LITSTR   shift, and go to state 21
    LITCHAR  shift, and go to state 22
    T        shift, and go to state 23
    F        shift, and go to state 24
    MUT      shift, and go to state 25
    REF      shift, and go to state 26
    LBRACK   shift, and go to state 27
    AND      shift, and go to state 28
    LPAREN   shift, and go to state 29
    RPAREN   shift, and go to state 30
    SUB      shift, and go to state 31
    UNDER    shift, and go to state 32

    fn_params   go to state 33
    fn_param    go to state 34
    pat         go to state 35
    deref-pat   go to state 36
    name_bind   go to state 37
    array_pat   go to state 38
    enum_pat    go to state 39
    struct_pat  go to state 40
    prim_lit    go to state 41


State 17

   33 struct: STRUCT ID LCBRACK . struct_field_defs RCBRACK

    ID  shift, and go to state 42

    struct_field_defs  go to state 43
    struct_field_def   go to state 44


State 18

   26 enum: ENUM ID LCBRACK . enum_ctor_defs RCBRACK

    ID  shift, and go to state 45

    enum_ctor_defs  go to state 46
    enum_ctor_def   go to state 47


State 19

  147 prim_lit: LITDEC .

    $default  reduce using rule 147 (prim_lit)


State 20

   65 name_bind: ID .
   75 enum_pat: ID . QUALIFIER ID
   76         | ID . QUALIFIER ID LPAREN enum-ctors RPAREN
   79 struct_pat: ID . LCBRACK pat-fields RCBRACK

    QUALIFIER  shift, and go to state 48
    LCBRACK    shift, and go to state 49

    $default  reduce using rule 65 (name_bind)


State 21

  146 prim_lit: LITSTR .

    $default  reduce using rule 146 (prim_lit)


State 22

  145 prim_lit: LITCHAR .

    $default  reduce using rule 145 (prim_lit)


State 23

  143 prim_lit: T .

    $default  reduce using rule 143 (prim_lit)


State 24

  144 prim_lit: F .

    $default  reduce using rule 144 (prim_lit)


State 25

   68 name_bind: MUT . ID

    ID  shift, and go to state 50


State 26

   66 name_bind: REF . ID
   67          | REF . MUT ID

    ID   shift, and go to state 51
    MUT  shift, and go to state 52


State 27

   72 array_pat: LBRACK . array_elems RBRACK

    LITDEC   shift, and go to state 19
    ID       shift, and go to state 20
    LITSTR   shift, and go to state 21
    LITCHAR  shift, and go to state 22
    T        shift, and go to state 23
    F        shift, and go to state 24
    MUT      shift, and go to state 25
    REF      shift, and go to state 26
    LBRACK   shift, and go to state 27
    AND      shift, and go to state 28
    LPAREN   shift, and go to state 29
    SUB      shift, and go to state 31
    UNDER    shift, and go to state 32

    pat          go to state 53
    deref-pat    go to state 36
    name_bind    go to state 37
    array_pat    go to state 38
    array_elems  go to state 54
    enum_pat     go to state 39
    struct_pat   go to state 40
    prim_lit     go to state 41


State 28

   64 deref-pat: AND . pat

    LITDEC   shift, and go to state 19
    ID       shift, and go to state 20
    LITSTR   shift, and go to state 21
    LITCHAR  shift, and go to state 22
    T        shift, and go to state 23
    F        shift, and go to state 24
    MUT      shift, and go to state 25
    REF      shift, and go to state 26
    LBRACK   shift, and go to state 27
    AND      shift, and go to state 28
    LPAREN   shift, and go to state 29
    SUB      shift, and go to state 31
    UNDER    shift, and go to state 32

    pat         go to state 55
    deref-pat   go to state 36
    name_bind   go to state 37
    array_pat   go to state 38
    enum_pat    go to state 39
    struct_pat  go to state 40
    prim_lit    go to state 41


State 29

   57 pat: LPAREN . RPAREN

    RPAREN  shift, and go to state 56


State 30

   11 funct: FN ID LPAREN RPAREN . block
   12      | FN ID LPAREN RPAREN . ELEMENTSELECT type block
   13      | FN ID LPAREN RPAREN . ELEMENTSELECT EXCL block

    ELEMENTSELECT  shift, and go to state 57
    LCBRACK        shift, and go to state 58

    block  go to state 59


State 31

   62 pat: SUB . LITDEC

    LITDEC  shift, and go to state 60


State 32

   63 pat: UNDER .

    $default  reduce using rule 63 (pat)


State 33

    8 funct: FN ID LPAREN fn_params . RPAREN block
    9      | FN ID LPAREN fn_params . RPAREN ELEMENTSELECT type block
   10      | FN ID LPAREN fn_params . RPAREN ELEMENTSELECT EXCL block

    RPAREN  shift, and go to state 61


State 34

   23 fn_params: fn_param . COMMA fn_params
   24          | fn_param .

    COMMA  shift, and go to state 62

    $default  reduce using rule 24 (fn_params)


State 35

   25 fn_param: pat . COLON type

    COLON  shift, and go to state 63


State 36

   58 pat: deref-pat .

    $default  reduce using rule 58 (pat)


State 37

   56 pat: name_bind .

    $default  reduce using rule 56 (pat)


State 38

   59 pat: array_pat .

    $default  reduce using rule 59 (pat)


State 39

   60 pat: enum_pat .

    $default  reduce using rule 60 (pat)


State 40

   61 pat: struct_pat .

    $default  reduce using rule 61 (pat)


State 41

   55 pat: prim_lit .

    $default  reduce using rule 55 (pat)


State 42

   36 struct_field_def: ID . COLON type

    COLON  shift, and go to state 64


State 43

   33 struct: STRUCT ID LCBRACK struct_field_defs . RCBRACK

    RCBRACK  shift, and go to state 65


State 44

   34 struct_field_defs: struct_field_def . COMMA struct_field_defs
   35                  | struct_field_def .

    COMMA  shift, and go to state 66

    $default  reduce using rule 35 (struct_field_defs)


State 45

   29 enum_ctor_def: ID .
   30              | ID . LPAREN ctor-types RPAREN

    LPAREN  shift, and go to state 67

    $default  reduce using rule 29 (enum_ctor_def)


State 46

   26 enum: ENUM ID LCBRACK enum_ctor_defs . RCBRACK

    RCBRACK  shift, and go to state 68


State 47

   27 enum_ctor_defs: enum_ctor_def . COMMA enum_ctor_defs
   28               | enum_ctor_def .

    COMMA  shift, and go to state 69

    $default  reduce using rule 28 (enum_ctor_defs)


State 48

   75 enum_pat: ID QUALIFIER . ID
   76         | ID QUALIFIER . ID LPAREN enum-ctors RPAREN

    ID  shift, and go to state 70


State 49

   79 struct_pat: ID LCBRACK . pat-fields RCBRACK

    ID  shift, and go to state 71

    pat-fields  go to state 72
    pat-field   go to state 73


State 50

   68 name_bind: MUT ID .

    $default  reduce using rule 68 (name_bind)


State 51

   66 name_bind: REF ID .

    $default  reduce using rule 66 (name_bind)


State 52

   67 name_bind: REF MUT . ID

    ID  shift, and go to state 74


State 53

   73 array_elems: pat . COMMA array_elems
   74            | pat .

    COMMA  shift, and go to state 75

    $default  reduce using rule 74 (array_elems)


State 54

   72 array_pat: LBRACK array_elems . RBRACK

    RBRACK  shift, and go to state 76


State 55

   64 deref-pat: AND pat .

    $default  reduce using rule 64 (deref-pat)


State 56

   57 pat: LPAREN RPAREN .

    $default  reduce using rule 57 (pat)


State 57

   12 funct: FN ID LPAREN RPAREN ELEMENTSELECT . type block
   13      | FN ID LPAREN RPAREN ELEMENTSELECT . EXCL block

    LITDEC  shift, and go to state 77
    ID      shift, and go to state 78
    BOX     shift, and go to state 79
    BOOL    shift, and go to state 80
    U8      shift, and go to state 81
    I32     shift, and go to state 82
    LBRACK  shift, and go to state 83
    AND     shift, and go to state 84
    EXCL    shift, and go to state 85
    LPAREN  shift, and go to state 86

    type  go to state 87


State 58

   14 block: LCBRACK . RCBRACK
   15      | LCBRACK . stmts RCBRACK

    LITDEC   shift, and go to state 19
    ID       shift, and go to state 88
    LITSTR   shift, and go to state 21
    LITCHAR  shift, and go to state 22
    T        shift, and go to state 23
    F        shift, and go to state 24
    BOX      shift, and go to state 89
    IF       shift, and go to state 90
    LET      shift, and go to state 91
    LOOP     shift, and go to state 92
    MATCH    shift, and go to state 93
    RETURN   shift, and go to state 94
    WHILE    shift, and go to state 95
    LBRACK   shift, and go to state 96
    RCBRACK  shift, and go to state 97
    AND      shift, and go to state 98
    EXCL     shift, and go to state 99
    LPAREN   shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102

    stmts         go to state 103
    stmt          go to state 104
    box_new       go to state 105
    let           go to state 106
    address       go to state 107
    address-mut   go to state 108
    deref         go to state 109
    match         go to state 110
    exp           go to state 111
    add           go to state 112
    sub           go to state 113
    mul           go to state 114
    div           go to state 115
    or            go to state 116
    and           go to state 117
    equal         go to state 118
    not-equal     go to state 119
    minus         go to state 120
    less          go to state 121
    greater       go to state 122
    less-equ      go to state 123
    greater-equ   go to state 124
    rem           go to state 125
    not           go to state 126
    while         go to state 127
    loop          go to state 128
    if            go to state 129
    lit           go to state 130
    prim_lit      go to state 131
    field_lookup  go to state 132
    field         go to state 133
    array_index   go to state 134
    fn-call       go to state 135
    assign        go to state 136
    comp_lit      go to state 137
    enum_lit      go to state 138
    struct_lit    go to state 139
    array_lit     go to state 140


State 59

   11 funct: FN ID LPAREN RPAREN block .

    $default  reduce using rule 11 (funct)


State 60

   62 pat: SUB LITDEC .

    $default  reduce using rule 62 (pat)


State 61

    8 funct: FN ID LPAREN fn_params RPAREN . block
    9      | FN ID LPAREN fn_params RPAREN . ELEMENTSELECT type block
   10      | FN ID LPAREN fn_params RPAREN . ELEMENTSELECT EXCL block

    ELEMENTSELECT  shift, and go to state 141
    LCBRACK        shift, and go to state 58

    block  go to state 142


State 62

   23 fn_params: fn_param COMMA . fn_params

    LITDEC   shift, and go to state 19
    ID       shift, and go to state 20
    LITSTR   shift, and go to state 21
    LITCHAR  shift, and go to state 22
    T        shift, and go to state 23
    F        shift, and go to state 24
    MUT      shift, and go to state 25
    REF      shift, and go to state 26
    LBRACK   shift, and go to state 27
    AND      shift, and go to state 28
    LPAREN   shift, and go to state 29
    SUB      shift, and go to state 31
    UNDER    shift, and go to state 32

    fn_params   go to state 143
    fn_param    go to state 34
    pat         go to state 35
    deref-pat   go to state 36
    name_bind   go to state 37
    array_pat   go to state 38
    enum_pat    go to state 39
    struct_pat  go to state 40
    prim_lit    go to state 41


State 63

   25 fn_param: pat COLON . type

    LITDEC  shift, and go to state 77
    ID      shift, and go to state 78
    BOX     shift, and go to state 79
    BOOL    shift, and go to state 80
    U8      shift, and go to state 81
    I32     shift, and go to state 82
    LBRACK  shift, and go to state 83
    AND     shift, and go to state 84
    LPAREN  shift, and go to state 86

    type  go to state 144


State 64

   36 struct_field_def: ID COLON . type

    LITDEC  shift, and go to state 77
    ID      shift, and go to state 78
    BOX     shift, and go to state 79
    BOOL    shift, and go to state 80
    U8      shift, and go to state 81
    I32     shift, and go to state 82
    LBRACK  shift, and go to state 83
    AND     shift, and go to state 84
    LPAREN  shift, and go to state 86

    type  go to state 145


State 65

   33 struct: STRUCT ID LCBRACK struct_field_defs RCBRACK .

    $default  reduce using rule 33 (struct)


State 66

   34 struct_field_defs: struct_field_def COMMA . struct_field_defs

    ID  shift, and go to state 42

    struct_field_defs  go to state 146
    struct_field_def   go to state 44


State 67

   30 enum_ctor_def: ID LPAREN . ctor-types RPAREN

    LITDEC  shift, and go to state 77
    ID      shift, and go to state 78
    BOX     shift, and go to state 79
    BOOL    shift, and go to state 80
    U8      shift, and go to state 81
    I32     shift, and go to state 82
    LBRACK  shift, and go to state 83
    AND     shift, and go to state 84
    LPAREN  shift, and go to state 86

    ctor-types  go to state 147
    type        go to state 148


State 68

   26 enum: ENUM ID LCBRACK enum_ctor_defs RCBRACK .

    $default  reduce using rule 26 (enum)


State 69

   27 enum_ctor_defs: enum_ctor_def COMMA . enum_ctor_defs

    ID  shift, and go to state 45

    enum_ctor_defs  go to state 149
    enum_ctor_def   go to state 47


State 70

   75 enum_pat: ID QUALIFIER ID .
   76         | ID QUALIFIER ID . LPAREN enum-ctors RPAREN

    LPAREN  shift, and go to state 150

    $default  reduce using rule 75 (enum_pat)


State 71

   82 pat-field: ID . COLON pat

    COLON  shift, and go to state 151


State 72

   79 struct_pat: ID LCBRACK pat-fields . RCBRACK

    RCBRACK  shift, and go to state 152


State 73

   80 pat-fields: pat-field . COMMA pat-fields
   81           | pat-field .

    COMMA  shift, and go to state 153

    $default  reduce using rule 81 (pat-fields)


State 74

   67 name_bind: REF MUT ID .

    $default  reduce using rule 67 (name_bind)


State 75

   73 array_elems: pat COMMA . array_elems

    LITDEC   shift, and go to state 19
    ID       shift, and go to state 20
    LITSTR   shift, and go to state 21
    LITCHAR  shift, and go to state 22
    T        shift, and go to state 23
    F        shift, and go to state 24
    MUT      shift, and go to state 25
    REF      shift, and go to state 26
    LBRACK   shift, and go to state 27
    AND      shift, and go to state 28
    LPAREN   shift, and go to state 29
    SUB      shift, and go to state 31
    UNDER    shift, and go to state 32

    pat          go to state 53
    deref-pat    go to state 36
    name_bind    go to state 37
    array_pat    go to state 38
    array_elems  go to state 154
    enum_pat     go to state 39
    struct_pat   go to state 40
    prim_lit     go to state 41


State 76

   72 array_pat: LBRACK array_elems RBRACK .

    $default  reduce using rule 72 (array_pat)


State 77

   43 type: LITDEC .

    $default  reduce using rule 43 (type)


State 78

   42 type: ID .

    $default  reduce using rule 42 (type)


State 79

   41 type: BOX . LESS type GREATER

    LESS  shift, and go to state 155


State 80

   37 type: BOOL .
   38     | BOOL . SEMICOLON type

    SEMICOLON  shift, and go to state 156

    SEMICOLON  [reduce using rule 37 (type)]
    $default   reduce using rule 37 (type)


State 81

   47 type: U8 .

    $default  reduce using rule 47 (type)

